--- a/sites/font-comparison/font-comparison.qmd
+++ b/sites/font-comparison/font-comparison.qmd
@@ -11,14 +11,25 @@ knitr::include_graphics("https://ichef.bbci.co.uk/news/976/cpsprodpb/DCA4/produc
 
 ::: {.callout-note collapse="true" title="Expand to see font name"}
 [PDF Font: EB Garamond]{style="font-family:'EB Garamond'"}
+Most preferred 32/350
 :::
 
-# [Cheeky boar leaves nudist grunting in laptop chase]{style="font-family:'Libre Franklin'"}<br>
+# [Cheeky boar leaves nudist grunting in laptop chase]{style="font-family:'franklin-gothic-atf'"}<br>
 
-[**A nudist in Berlin got too close to nature for comfort when a wild boar snatched his plastic bag - which had his laptop inside.** <br> The naked man gave chase to the boar and her two piglets - much to the amusement of fellow sunbathers. <br> Adele Landauer, an actor and life coach, took photos of the chase at Teufelssee - a popular bathing spot - and put them on Facebook. <br> "Nature strikes back!" she wrote, adding that the man laughed it all off. <br> "He gave it his all", with not a stitch on, she reported. "I then showed the photos to the man, he laughed soundly and authorised me to make them public."]{style="font-family:'Libre Franklin'"}
+[**A nudist in Berlin got too close to nature for comfort when a wild boar snatched his plastic bag - which had his laptop inside.** <br> The naked man gave chase to the boar and her two piglets - much to the amusement of fellow sunbathers. <br> Adele Landauer, an actor and life coach, took photos of the chase at Teufelssee - a popular bathing spot - and put them on Facebook. <br> "Nature strikes back!" she wrote, adding that the man laughed it all off. <br> "He gave it his all", with not a stitch on, she reported. "I then showed the photos to the man, he laughed soundly and authorised me to make them public."]{style="font-family:'franklin-gothic-atf'"}
 
 ::: {.callout-note collapse="true" title="Expand to see font name"}
-[Newsprint Font: Libre Franklin]{style="font-family:'Libre Franklin'"}
+[Newsprint Font: Franklin Gothic]{style="font-family:'franklin-gothic-atf'"}
+Most preferred by 3 out 350 people (the worst score).
+:::
+
+# [Cheeky boar leaves nudist grunting in laptop chase]{style="font-family:'Oswald'"}<br>
+
+[**A nudist in Berlin got too close to nature for comfort when a wild boar snatched his plastic bag - which had his laptop inside.** <br> The naked man gave chase to the boar and her two piglets - much to the amusement of fellow sunbathers. <br> Adele Landauer, an actor and life coach, took photos of the chase at Teufelssee - a popular bathing spot - and put them on Facebook. <br> "Nature strikes back!" she wrote, adding that the man laughed it all off. <br> "He gave it his all", with not a stitch on, she reported. "I then showed the photos to the man, he laughed soundly and authorised me to make them public."]{style="font-family:'Oswald'"}
+
+::: {.callout-note collapse="true" title="Expand to see font name"}
+[Web Font: Oswald]{style="font-family:'Oswald'"}
+Most preferred 10/350
 :::
 
 # [Cheeky boar leaves nudist grunting in laptop chase]{style="font-family:'Roboto'"}<br>
@@ -27,20 +38,14 @@ knitr::include_graphics("https://ichef.bbci.co.uk/news/976/cpsprodpb/DCA4/produc
 
 ::: {.callout-note collapse="true" title="Expand to see font name"}
 [Web Font: Roboto]{style="font-family:'Roboto'"}
+Most preferred 13/350
 :::
 
-# Cheeky boar leaves nudist grunting in laptop chase
+# [Cheeky boar leaves nudist grunting in laptop chase]{style="font-family:'Noto Sans'"}<br>
 
-**A nudist in Berlin got too close to nature for comfort when a wild boar snatched his plastic bag - which had his laptop inside.**
-
-The naked man gave chase to the boar and her two piglets - much to the amusement of fellow sunbathers.
-
-Adele Landauer, an actor and life coach, took photos of the chase at Teufelssee - a popular bathing spot - and put them on Facebook.
-
-"Nature strikes back!" she wrote, adding that the man laughed it all off.
-
-"He gave it his all", with not a stitch on, she reported. "I then showed the photos to the man, he laughed soundly and authorised me to make them public."
+[**A nudist in Berlin got too close to nature for comfort when a wild boar snatched his plastic bag - which had his laptop inside.** <br> The naked man gave chase to the boar and her two piglets - much to the amusement of fellow sunbathers. <br> Adele Landauer, an actor and life coach, took photos of the chase at Teufelssee - a popular bathing spot - and put them on Facebook. <br> "Nature strikes back!" she wrote, adding that the man laughed it all off. <br> "He gave it his all", with not a stitch on, she reported. "I then showed the photos to the man, he laughed soundly and authorised me to make them public."]{style="font-family:'Noto Sans'"}
 
 ::: {.callout-note collapse="true" title="Expand to see font name"}
 Readability Font: Noto Sans
+Most preferred 52/350 (Joint winner with Times)
 :::
