--- a/example-web-pages.qmd
+++ b/example-web-pages.qmd
@@ -13,7 +13,7 @@ This section demonstrates how webpage structure alters user experience.
 
 ### Baseline
 
-This [Baseline Welcome Page](https://ab604.github.io/webpage-design/main/uos-example-page.html) follows the principles discussed in previous chapters.
+This [Baseline Welcome Page](https://ab604.github.io/webpage-design/main/uos-example-page.html){target="_blank"} follows the principles discussed in previous chapters.
 
 It's not intended to be perfect either in form or content, but to provide a baseline for comparison to the variations below.
 
