--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,8 @@ bibliography: references.bib
 
 # Overview {.unnumbered}
 
+[![](https://zenodo.org/badge/724236066.svg){fig-alt="DOI: 10.5281/zenodo.13133922" fig-align="left"}](https://zenodo.org/doi/10.5281/zenodo.13133922)
+
 This short book has been created as a resource for librarians at the University of Southampton. It aims to aggregate the most pertinent information available about how to create effective webpages for library users.
 
 As library webpages consist largely of text and links, text-based pages are the focus of this book.
@@ -20,4 +22,28 @@ The overarching questions under consideration are:
 
 Our goal is to create webpages that work for library users, and in doing so resist the temptation to design for ourselves.
 
-[![](https://zenodo.org/badge/724236066.svg){fig-alt="DOI: 10.5281/zenodo.13133922" fig-align="left"}](https://zenodo.org/doi/10.5281/zenodo.13133922)
+### Citation
+
+Please cite this work as,
+
+> Bailey A, (2024). *Webpage Design*, <https://ab604.github.io/webpage-design/>
+
+:::{.callout-note title="Bibtex citation:" appearance="simple" collapse="true"}
+
+```bibtex 
+
+@book{bailey2024,
+    title = {Webpage {Design},
+    copyright = {Creative Commons Attribution 4.0 International},
+    shorttitle = {ab604/webpage-design},
+    url = {https://zenodo.org/doi/10.5281/zenodo.13133922},
+    urldate = {2024-07-31},
+    publisher = {Zenodo},
+    author = {Alistair Bailey},
+    month = jul,
+    year = {2024},
+    doi = {10.5281/ZENODO.13133922},
+}
+```
+
+:::
