--- a/zenodo-citation.bib
+++ b/zenodo-citation.bib
@@ -1,24 +1,9 @@
 
-@book{alistair_bailey_webpage_2024,
-	title = {Webpage {Design}},
+@book{bailey2024,
+	title = {Webpage Design},
 	copyright = {Creative Commons Attribution 4.0 International},
 	shorttitle = {ab604/webpage-design},
 	url = {https://zenodo.org/doi/10.5281/zenodo.13133922},
-	abstract = {This short book has been created as a resource for librarians at the University of Southampton. It aims to aggregate the most pertinent information available about how to create effective webpages for library users.
-
-As library webpages consist largely of text and links, text-based pages are the focus of this book.
-
-The scope does extend to images, but not to video or other media. However, most of the considerations that apply to images, apply to videos and other media.
-
-The material presented here encourages you to consider what we know about what works and why, rather than present a rigid framework that you must follow.
-
-The overarching questions under consideration are:
-
-    What do we know about how users engage with webpages?
-
-    What do we know about human cognition and behaviour that applies to webpage design?
-
-Our goal is to create webpages that work for library users, and in doing so resist the temptation to design for ourselves.},
 	urldate = {2024-07-31},
 	publisher = {Zenodo},
 	author = {Alistair Bailey},
